<resources>
    <string name="app_name">MVQA</string>
    <string name="enter_image_text">Select an image from camera roll</string>
    <string name="question_entered_text">Enter a question here</string>
    <string name="result_text">Result:</string>
    <string name="answer_text">-</string>
    <string name="submit_question">Submit question</string>
    <string name="test_button_text">Evaluate on test set</string>
    <string name="accuracy_text">-</string>
    <string name="execution_time_text">-</string>
    <string name="cpu_time_text">-</string>
</resources>