<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <EditText
            android:id="@+id/questionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/question_entered_text"
            android:gravity="center"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submitQuestionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitQuestion"
            android:text="@string/submit_question" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_text" />

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/answer_text" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="evaluateTestSet"
            android:text="@string/test_button_text" />

        <TextView
            android:id="@+id/accuracyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accuracy_text" />

        <TextView
            android:id="@+id/ExecutionTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/execution_time_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>